[project]
name = "pyperbox"
version = "0.1.1"
description = "Python implementation of a hyperbox"
authors = [
    {name = "vitroid",email = "vitroid@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deprecation (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
